force-app/main/default/objects/PHSS_TriggerSettings__c/PHSS_TriggerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>PHSS_TriggerSettings</description>
    <label>PHSS Trigger Settings</label>
</CustomObject>