force-app/main/default/objects/PHSS_TriggerSettings__c/fields/AccountContactRelationTrigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>AccountContactRelationTrigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AccountContactRelationTrigger Disabled</label>
    <type>Checkbox</type>
</CustomField>