force-app/main/default/objects/PHSS_TriggerSettings__c/fields/AccountTrigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>AccountTrigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the AccountTrigger is disabled.</description>
    <inlineHelpText>When checked, the AccountTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>AccountTrigger Disabled</label>
    <type>Checkbox</type>
</CustomField>