force-app/main/default/objects/PHSS_TriggerSettings__c/fields/AllDisabled__c.field-meta.xml
<CustomField>
    <fullName>AllDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Disabled</label>
    <type>Checkbox</type>
</CustomField>