force-app/main/default/objects/PHSS_TriggerSettings__c/fields/CaseDisabled__c.field-meta.xml
<CustomField>
    <fullName>CaseDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Disabled</label>
    <type>Checkbox</type>
</CustomField>