force-app/main/default/objects/PHSS_TriggerSettings__c/fields/CCOrderItemTrigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>CCOrderItemTrigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the CCOrderItemTrigger is disabled</description>
    <inlineHelpText>When checked, the CCOrderItemTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>CCOrderItemTrigger Disabled</label>
    <type>Checkbox</type>
</CustomField>