force-app/main/default/objects/PHSS_TriggerSettings__c/fields/CertificationProvisioningDisabled__c.field-meta.xml
<CustomField>
    <fullName>CertificationProvisioningDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification Provisioning Disabled</label>
    <type>Checkbox</type>
</CustomField>