force-app/main/default/objects/PHSS_TriggerSettings__c/fields/ContactTrigger_Bucket_Assign_Disabled__c.field-meta.xml
<CustomField>
    <fullName>ContactTrigger_Bucket_Assign_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContactTrigger Bucket Assign Disabled</label>
    <type>Checkbox</type>
</CustomField>