force-app/main/default/objects/PHSS_TriggerSettings__c/fields/ContactTrigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>ContactTrigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the ContactTrigger is disabled</description>
    <inlineHelpText>When checked, the ContactTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>ContactTrigger Disabled</label>
    <type>Checkbox</type>
</CustomField>