force-app/main/default/objects/PHSS_TriggerSettings__c/fields/ContentVersionDisabled__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Version Disabled</label>
    <type>Checkbox</type>
</CustomField>