force-app/main/default/objects/PHSS_TriggerSettings__c/fields/CreateTrainingEventForNewOrderDisabled__c.field-meta.xml
<CustomField>
    <fullName>CreateTrainingEventForNewOrderDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the CreateTrainingEventForNewOrder trigger on Order is disabled. NOTE: Only methods using checkbox will be disabled.</description>
    <inlineHelpText>When checked, the CreateTrainingEventForNewOrder trigger on Order is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>CreateTrainingEventForNewOrder Disabled</label>
    <type>Checkbox</type>
</CustomField>