force-app/main/default/objects/PHSS_TriggerSettings__c/fields/eCommerceExportUseNewLearningPlanId__c.field-meta.xml
<CustomField>
    <fullName>eCommerceExportUseNewLearningPlanId__c</fullName>
    <defaultValue>true</defaultValue>
    <label>eCommerceExportUseNewLearningPlanId</label>
    <type>Checkbox</type>
</CustomField>