force-app/main/default/objects/PHSS_TriggerSettings__c/fields/Fulfillment_Item_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Item_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FulfillmentItemTrigger.trigger will not run when true</description>
    <inlineHelpText>FulfillmentItemTrigger.trigger will not run when true</inlineHelpText>
    <label>Fulfillment Item Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>