force-app/main/default/objects/PHSS_TriggerSettings__c/fields/FulfillmentTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Fulfillment Trigger is disabled.</description>
    <inlineHelpText>When checked, the Fulfillment Trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>Fulfillment Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>