force-app/main/default/objects/PHSS_TriggerSettings__c/fields/ILTRosterTrigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>ILTRosterTrigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the ILTRosterTrigger is disabled</description>
    <inlineHelpText>When checked, the ILTRosterTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>ILTRosterTrigger Disabled</label>
    <type>Checkbox</type>
</CustomField>