force-app/main/default/objects/PHSS_TriggerSettings__c/fields/LearningPlanAssignmentTriggerTSDisable__c.field-meta.xml
<CustomField>
    <fullName>LearningPlanAssignmentTriggerTSDisable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to disable LearningPlanAssignmentTriggerTS on redwing__Training_Plan_Assignment__c object.</description>
    <inlineHelpText>Check this box to disable LearningPlanAssignmentTriggerTS on redwing__Training_Plan_Assignment__c object.</inlineHelpText>
    <label>LearningPlanAssignmentTriggerTSDisable</label>
    <type>Checkbox</type>
</CustomField>