force-app/main/default/objects/PHSS_TriggerSettings__c/fields/LearningTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>LearningTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LearningTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>