force-app/main/default/objects/PHSS_TriggerSettings__c/fields/Open_Order_Processing_Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Open_Order_Processing_Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Order Processing Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>