force-app/main/default/objects/PHSS_TriggerSettings__c/fields/PHSSinitQRCodeIdentifierDisabled__c.field-meta.xml
<CustomField>
    <fullName>PHSSinitQRCodeIdentifierDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the PHSS_initQRCodeIdentifier trigger is disabled. NOTE: Only methods using checkbox will be disabled.</description>
    <inlineHelpText>When checked, the PHSS_initQRCodeIdentifier trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>PHSS_initQRCodeIdentifier Disabled</label>
    <type>Checkbox</type>
</CustomField>