force-app/main/default/objects/PHSS_TriggerSettings__c/fields/PriceListItemTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>PriceListItemTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PriceListItemTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>