force-app/main/default/objects/PHSS_TriggerSettings__c/fields/skedJobAlloctoILTInstructTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>skedJobAlloctoILTInstructTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>skedJobAlloctoILTInstructTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>