force-app/main/default/objects/PHSS_TriggerSettings__c/fields/skedJobtoILTClassFullServiceDisabled__c.field-meta.xml
<CustomField>
    <fullName>skedJobtoILTClassFullServiceDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the job-to-ILT class integration for full service jobs</description>
    <label>skedJobtoILTClassFullServiceDisabled</label>
    <type>Checkbox</type>
</CustomField>