force-app/main/default/objects/PHSS_TriggerSettings__c/fields/skedJobtoILTClassTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>skedJobtoILTClassTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>skedJobtoILTClassTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>