force-app/main/default/objects/PHSS_TriggerSettings__c/fields/skedLocationtoILTLocationTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>skedLocationtoILTLocationTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>skedLocationtoILTLocationTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>