force-app/main/default/objects/PHSS_TriggerSettings__c/fields/skedResourcetoILTInstructTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>skedResourcetoILTInstructTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>skedResourcetoILTInstructTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>