force-app/main/default/objects/PHSS_TriggerSettings__c/fields/StudentBulkUploadTriggerDisable__c.field-meta.xml
<CustomField>
    <fullName>StudentBulkUploadTriggerDisable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>StudentBulkUploadTriggerDisable</label>
    <type>Checkbox</type>
</CustomField>