force-app/main/default/objects/PHSS_TriggerSettings__c/fields/TransactionPaymentTriggerHelperDisable__c.field-meta.xml
<CustomField>
    <fullName>TransactionPaymentTriggerHelperDisable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the TransactionPaymentTriggerHelper is disabled. NOTE: Only methods using checkbox will be disabled.</description>
    <inlineHelpText>When checked, the TransactionPaymentTriggerHelper is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>TransactionPaymentTriggerHelperDisable</label>
    <type>Checkbox</type>
</CustomField>