force-app/main/default/objects/PHSS_TriggerSettings__c/fields/trgr_Channel_Compensation_Disabled__c.field-meta.xml
<CustomField>
    <fullName>trgr_Channel_Compensation_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the trgr_Channel_Compensation Trigger is disabled.</description>
    <inlineHelpText>When checked, the trgr_Channel_Compensation Trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>trgr_Channel_Compensation Disabled</label>
    <type>Checkbox</type>
</CustomField>