force-app/main/default/objects/PHSS_TriggerSettings__c/fields/UserProvisioningDisabled__c.field-meta.xml
<CustomField>
    <fullName>UserProvisioningDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Provisioning Disabled</label>
    <type>Checkbox</type>
</CustomField>