force-app/main/default/objects/PHSS_TriggerSettings__c/fields/UserTrigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>UserTrigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the UserTrigger is disabled.</description>
    <inlineHelpText>When checked, the UserTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
    <label>UserTrigger Disabled</label>
    <type>Checkbox</type>
</CustomField>