force-app/main/default/objects/PHSS_TriggerSettings__c/fields/VoucherTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>VoucherTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VoucherTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>