force-app/main/default/objects/PHSS_TriggerSettings__c/fields/VoucherTriggerOnlineHighWatermark__c.field-meta.xml
<CustomField>
    <fullName>VoucherTriggerOnlineHighWatermark__c</fullName>
    <description>Maximum number of vouchers to create for online courses when low watermark is reached.  Default 150.</description>
    <label>VoucherTriggerOnlineHighWatermark</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>