force-app/main/default/objects/PHSS_TriggerSettings__c/fields/VoucherTriggerOnlineLowWatermark__c.field-meta.xml
<CustomField>
    <fullName>VoucherTriggerOnlineLowWatermark__c</fullName>
    <description>When the number of Issued vouchers for an online course drops to this level, another (High Watermark-Low Watermark) vouchers are created in Issued status</description>
    <label>VoucherTriggerOnlineLowWatermark</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>